# ibc-fees

./: .gitignore  Cargo.toml
data/: phoenix-clients.csv  terra-fees-4985676.csv
src/: main.rs
summaries/: terra-fees-4985676-70846738-summary.csv  terra-fees-4985676-7102688-summary.csv
