[package]
name = "ibc_fees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
dotenv="0.15.0"
clap = "3.1.6"
secp256k1 = { version = "0.20.3", default-features = false }
terra-rust-cli = "1.0.13"
terra-rust-api="1.2"
terra-proto="0.5.12-beta.3"
prost="0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
log = "0.4.14"
anyhow = "1.0"
thiserror="1.0"
base64 = "0.13.0"
rust_decimal="1.12.2"
rust_decimal_macros="1.12.2"